Bug 1550532 - Avoid auto-hyphenating capitalized words, except for German. r=emilio,mats

This affects a number of our existing reftests, so we'll need to update those
to not expect auto-hyphenation of a sentence-initial (capitalized) word.

(Hyphenation behavior is not sufficiently well-specified for this to be tested
at the WPT level, so we just use Gecko-specific reftests.)

Differential Revision: https://phabricator.services.mozilla.com/D30912